--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -6,5 +6,10 @@ $color-red: #ff0000;
 $color-orange-primary: #ffa700;
 $color-grey: #64748b;
 $color-dark: #1e293b;
+$color-white: #ffffff;
 $color-dark-alt: #334155;
 $color-light: #f1f5f9;
+$color-blue-primary: #013299;
+$color-white-gray: #afb0b1;
+$color-shadow-gray: #cfcfcf;
+$color-dark-blue: #051622;
