--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,20 +1,40 @@
 @import 'typography';
+@import 'colors';
+@import 'breakpoints';
 
-*,
-*::before,
-*::after {
+html {
   box-sizing: border-box;
-  margin: 0;
-  position: relative;
-  @include font-open-sans();
-  @include font-weight(normal);
+  scroll-behavior: smooth;
 }
 
-body {
-  min-height: 100vh;
-  line-height: 1.6;
-  font-size: $font-size-normal;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $color-dark-blue;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $color-dark-blue;
+}
+
+a {
+  text-decoration: none;
 }
