--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -5,6 +5,9 @@
 $font-size-normal: 1rem;
 $font-size-medium: 1.5rem;
 $font-size-large: 2rem;
+$font-size-large-l: 2.5rem;
+$font-size-large-xl: 3rem;
+$font-size-large-xxl: 4rem;
 
 @mixin font-roboto-slab() {
   font-family: 'Roboto Slab', serif;
@@ -14,9 +17,19 @@ $font-size-large: 2rem;
   font-family: 'Open Sans', sans-serif;
 }
 
+@mixin font-monserrat {
+  font-family: 'Montserrat', sans-serif;
+}
+
+@mixin font-dm-serif {
+  font-family: 'DM Serif Display', serif;
+}
+
 @mixin font-weight($weight) {
   $weights: (
     thin: 100,
+    extra-light: 200,
+    light: 300,
     normal: 400,
     medium: 500,
     bold: 700,
