Added Projects component.

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -13,3 +13,4 @@ $color-blue-primary: #013299;
 $color-white-gray: #afb0b1;
 $color-shadow-gray: #cfcfcf;
 $color-dark-blue: #051622;
+$color-white-light: #f0f0f0,
