added the 404 page and lazy loading over components and images.

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -5,7 +5,7 @@
 $color-red: #ff0000;
 $color-orange-primary: #ffa700;
 $color-grey: #64748b;
-$color-dark: #1e293b;
+$color-dark: #000000;
 $color-white: #ffffff;
 $color-dark-alt: #334155;
 $color-light: #f1f5f9;
