removed vue-cookie-accept-decline library and rewrite the Cookie component.

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,7 +1,6 @@
 /*
-    Global Color Variables
-*/
-
+ *  Global Color Variables
+ */
 $color-red: #ff0000;
 $color-orange-primary: #ffa700;
 $color-grey: #64748b;
@@ -15,3 +14,7 @@ $color-shadow-gray: #cfcfcf;
 $color-dark-blue: #051622;
 $color-white-light: #f0f0f0;
 $color-shadow-middle-gray: #808080;
+$color-green-dark: #409343;
+$color-green-normal: #4caf50;
+$color-white-middle: #fafafa;
+$color-gray-shadow: #ddd,
