--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,14 +1,11 @@
 /*
  *  Global Color Variables
  */
-$color-red: #ff0000;
 $color-orange-primary: #ffa700;
-$color-grey: #64748b;
+$color-yellow-primary: #ffc200;
 $color-dark: #000000;
 $color-white: #ffffff;
-$color-dark-alt: #334155;
 $color-light: #f1f5f9;
-$color-blue-primary: #013299;
 $color-white-gray: #afb0b1;
 $color-shadow-gray: #cfcfcf;
 $color-dark-blue: #051622;
@@ -17,4 +14,4 @@ $color-shadow-middle-gray: #808080;
 $color-green-dark: #409343;
 $color-green-normal: #4caf50;
 $color-white-middle: #fafafa;
-$color-gray-shadow: #ddd,
+$color-gray-shadow: #ddd;
