configured stylelint and addde vitest integration (unit testing for the Copyright component.)

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -3,8 +3,8 @@
  */
 $color-orange-primary: #ffa700;
 $color-yellow-primary: #ffc200;
-$color-dark: #000000;
-$color-white: #ffffff;
+$color-dark: #000;
+$color-white: #fff;
 $color-light: #f1f5f9;
 $color-white-gray: #afb0b1;
 $color-shadow-gray: #cfcfcf;
