--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -1,7 +1,6 @@
-/*
-    Global Typography Variables
-*/
-
+/**
+ * Global Typography Variables
+ */
 $font-size-normal: 1rem;
 $font-size-medium: 1.5rem;
 $font-size-large: 2rem;
@@ -10,12 +9,19 @@ $font-size-large-xl: 3rem;
 $font-size-large-xxl: 4rem;
 
 @mixin font-roboto-slab() {
-  font-family: Roboto, 'Noto Sans TC', 'Noto Sans SC', 'Noto Sans JP',
-    'Noto Sans KR', Prompt, sans-serif, 'Microsoft JhengHei';
+  font-family:
+    Roboto,
+    'Noto Sans TC',
+    'Noto Sans SC',
+    'Noto Sans JP',
+    'Noto Sans KR',
+    Prompt,
+    sans-serif,
+    'Microsoft JhengHei';
 }
 
 @mixin font-monserrat {
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat, sans-serif;
 }
 
 @mixin font-weight($weight) {
