--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,17 +1,16 @@
 /*
  *  Global Color Variables
  */
-$color-orange-primary: #ffa700;
-$color-yellow-primary: #ffc200;
-$color-dark: #000;
-$color-white: #fff;
-$color-light: #f1f5f9;
-$color-white-gray: #afb0b1;
-$color-shadow-gray: #cfcfcf;
-$color-dark-blue: #051622;
-$color-white-light: #f0f0f0;
-$color-shadow-middle-gray: #808080;
-$color-green-dark: #409343;
-$color-green-normal: #4caf50;
-$color-white-middle: #fafafa;
-$color-gray-shadow: #ddd;
+$color-web-orange: #ffa700;
+$color-amber: #ffc200;
+$color-black: #000;
+$color-white: #FFF;
+$color-catskill-white: #f1f5f9;
+$color-bombay: #afb0b1;
+$color-alto: #cfcfcf;
+$color-black-pearl: #051622;
+$color-gallery: #f0f0f0;
+$color-gray: #808080;
+$color-goblin: #409343;
+$color-fruit-salad: #4caf50;
+$color-alabaster: #fafafa;
