--- a/src/styles/styleHelpers.scss
+++ b/src/styles/styleHelpers.scss
@@ -1,3 +1,7 @@
+@use './helperBreakpoints.scss' as *;
+@use './typography.scss' as *;
+@use './colors.scss' as *;
+
 @mixin line-hover {
   position: relative;
   display: inline-block;
@@ -26,7 +30,6 @@
 }
 
 @mixin keyframe-appear {
-
   @keyframes appear {
     to {
       opacity: 1;
@@ -39,7 +42,6 @@
 }
 
 @mixin keyframe-typing {
-
   @keyframes typing {
     from {
       width: 0;
@@ -53,6 +55,7 @@
 
 @mixin color-web-orange-style {
   color: $color-web-orange;
+
   @include font-weight(bold);
 
   &:hover {
